fix spacing error

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@
     width: 35.5px;
     height: 35.5px;
 
-    top: -1px;
+    top: -2px;
     left: -29px;
     border-width: 1px;
     border-bottom-width: 0;
@@ -49,7 +49,7 @@
     width: 35.5px;
     height: 35.5px;
 
-    top: -1px;
+    top: -2px;
     right: -29px;
     border-width: 1px;
     border-bottom-width: 0;
